--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build:config": "tsc nextI18NextConfig.ts --outDir ./ --esModuleInterop",
+
+
+
+  "build": "npm run build:config && next build",
     "start": "next start",
     "lint": "next lint"
   },
@@ -16,12 +20,14 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
+    "i18next": "^23.11.5",
     "moment": "^2.29.4",
     "next": "13.4.12",
     "next-i18next": "^15.3.0",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-i18next": "^14.1.2",
     "react-icons": "^4.10.1",
     "react-outside-click-handler": "^1.3.0",
     "swiper": "^10.0.4",
