--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,8 +28,8 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    ".next/types/**/*.ts"
-, "nextI18NextConfig.ts", "next.config.js"  ],
+    ".next/types/**/*.ts", 
+    "nextI18NextConfig.ts", "next.config.js"  ],
   "exclude": [
     "node_modules"
   ]
