--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/material": "^5.15.20",
     "@types/node": "20.4.4",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
@@ -17,6 +20,7 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
+    "formik": "^2.4.6",
     "i18next": "^23.11.5",
     "moment": "^2.29.4",
     "next": "13.4.12",
@@ -29,7 +33,8 @@
     "react-outside-click-handler": "^1.3.0",
     "swiper": "^10.0.4",
     "tailwindcss": "3.3.3",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/react-i18next": "^8.1.0"
