--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "18.2.0",
     "react-i18next": "^14.1.2",
     "react-icons": "^4.12.0",
+    "react-loader-spinner": "^6.1.6",
     "react-outside-click-handler": "^1.3.0",
     "swiper": "^10.0.4",
     "tailwindcss": "3.3.3",
