--- a/package.json
+++ b/package.json
@@ -14,8 +14,6 @@
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.20",
     "@types/node": "20.4.4",
-    "@types/react": "18.2.15",
-    "@types/react-dom": "18.2.7",
     "@types/react-outside-click-handler": "^1.3.1",
     "autoprefixer": "10.4.14",
     "eslint": "8.45.0",
@@ -32,12 +30,15 @@
     "react-icons": "^4.12.0",
     "react-loader-spinner": "^6.1.6",
     "react-outside-click-handler": "^1.3.0",
+    "scheduler": "^0.23.2",
     "swiper": "^10.0.4",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
     "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@types/react": "^18.3.10",
+    "@types/react-dom": "^18.3.0",
     "@types/react-i18next": "^8.1.0"
   }
 }
