--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
     "formik": "^2.4.6",
+    "framer-motion": "^11.11.1",
     "i18next": "^23.11.5",
     "moment": "^2.29.4",
     "next": "13.4.12",
