--- a/package.json
+++ b/package.json
@@ -30,11 +30,13 @@
     "react-i18next": "^14.1.2",
     "react-icons": "^4.12.0",
     "react-loader-spinner": "^6.1.6",
+    "react-masonry-css": "^1.0.16",
     "react-outside-click-handler": "^1.3.0",
     "scheduler": "^0.23.2",
     "swiper": "^10.0.4",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
+    "yet-another-react-lightbox": "^3.21.6",
     "yup": "^1.4.0"
   },
   "devDependencies": {
