--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "framer-motion": "^11.11.1",
     "i18next": "^23.11.5",
     "moment": "^2.29.4",
-    "next": "13.4.12",
+    "next": "^13.5.1",
     "next-i18next": "^15.3.0",
     "postcss": "8.4.27",
     "react": "18.2.0",
