--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/node": "20.4.4",
     "@types/react-outside-click-handler": "^1.3.1",
     "autoprefixer": "10.4.14",
+    "axios": "^1.7.7",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
     "formik": "^2.4.6",
@@ -33,7 +34,7 @@
     "react-masonry-css": "^1.0.16",
     "react-outside-click-handler": "^1.3.0",
     "scheduler": "^0.23.2",
-    "swiper": "^10.0.4",
+    "swiper": "^10.3.1",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
     "yet-another-react-lightbox": "^3.21.6",
